--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=PHATBEN\\SQLEXPRESS;Database=CDxcellence;Trusted_Connection=True;"
+  },
+  "Jwt": {
+    "Key": "your_secret_key_here"
   }
 
 }
